test/parserTest/pass/test10.ic
class CS301 extends CSCore { 
    void catFun(){
        boolean ctz = true;
    }
}
