test/parserTest/fail/test18.ic
class NestedMethods () {
	void outerMethod () {
		void innerMethod () {
		
		}
	}
}